--- a/src/public/blockinsurance/PolicyHolder_claimstatus.html
+++ b/src/public/blockinsurance/PolicyHolder_claimstatus.html
@@ -183,10 +183,10 @@
                                                     <td class=" ">June 23, 2018 11:47:56 PM </td>
 
                                                     <td class=" ">John Blank L</td>
-                                                    <td class=" ">Pending</td>
-                                                    <td class="a-right a-right ">$7.45</td>
+                                                    <td class=" ">In-progress</td>
+                                                    <td class="a-right a-right ">&euro;7.45</td>
                                                     <td class=" last">
-                                                        <a href="#"></a>View</a>
+                                                        <a href="Claim_status.html">View</a>
                                                     </td>
                                                 </tr>
                                                 <tr class="odd pointer">
@@ -197,10 +197,10 @@
                                                     <td class=" ">June 23, 2018 11:30:12 PM</td>
 
                                                     <td class=" ">John Blank L</td>
-                                                    <td class=" ">Pending</td>
-                                                    <td class="a-right a-right ">$741.20</td>
+                                                    <td class=" ">In-progress</td>
+                                                    <td class="a-right a-right ">&euro;741.20</td>
                                                     <td class=" last">
-                                                        <a href="#"></a>View</a>
+                                                        <a href="Claim_status.html">View</a>
                                                     </td>
                                                 </tr>
                                                 <tr class="even pointer">
@@ -211,10 +211,10 @@
                                                     <td class=" ">June 24, 2018 10:55:33 PM</td>
 
                                                     <td class=" ">Mike Smith</td>
-                                                    <td class=" ">Pending</td>
-                                                    <td class="a-right a-right ">$432.26</td>
+                                                    <td class=" ">In-progress</td>
+                                                    <td class="a-right a-right ">&euro;432.26</td>
                                                     <td class=" last">
-                                                        <a href="#"></a>View</a>
+                                                        <a href="Claim_status.html">View</a>
                                                     </td>
                                                 </tr>
                                                 <tr class="odd pointer">
@@ -226,7 +226,7 @@
 
                                                     <td class=" ">Mike Smith</td>
                                                     <td class=" ">Paid</td>
-                                                    <td class="a-right a-right ">$333.21</td>
+                                                    <td class="a-right a-right ">&euro;333.21</td>
                                                     <td class=" last"><a href="#">View</a>
                                                     </td>
                                                 </tr>
@@ -239,7 +239,7 @@
 
                                                     <td class=" ">John Blank L</td>
                                                     <td class=" ">Paid</td>
-                                                    <td class="a-right a-right ">$7.45</td>
+                                                    <td class="a-right a-right ">&euro;7.45</td>
                                                     <td class=" last"><a href="#">View</a>
                                                     </td>
                                                 </tr>
@@ -252,7 +252,7 @@
 
                                                     <td class=" ">John Blank L</td>
                                                     <td class=" ">Paid</td>
-                                                    <td class="a-right a-right ">$741.20</td>
+                                                    <td class="a-right a-right ">&euro;741.20</td>
                                                     <td class=" last"><a href="#">View</a>
                                                     </td>
                                                 </tr>
@@ -265,7 +265,7 @@
 
                                                     <td class=" ">Mike Smith</td>
                                                     <td class=" ">Paid</td>
-                                                    <td class="a-right a-right ">$432.26</td>
+                                                    <td class="a-right a-right ">&euro;432.26</td>
                                                     <td class=" last"><a href="#">View</a>
                                                     </td>
                                                 </tr>
@@ -278,7 +278,7 @@
 
                                                     <td class=" ">Mike Smith</td>
                                                     <td class=" ">Paid</td>
-                                                    <td class="a-right a-right ">$333.21</td>
+                                                    <td class="a-right a-right ">&euro;333.21</td>
                                                     <td class=" last"><a href="#">View</a>
                                                     </td>
                                                 </tr>
@@ -300,7 +300,7 @@
             <!-- footer content -->
             <footer>
                 <div class="pull-right">
-                    
+
                 </div>
                 <div class="clearfix"></div>
             </footer>
