--- a/src/public/blockinsurance/PolicyHolder_notifications.html
+++ b/src/public/blockinsurance/PolicyHolder_notifications.html
@@ -109,70 +109,7 @@
                                 </ul>
                             </li>
 
-                            <li role="presentation" class="dropdown">
-                                <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false">
-                                    <i class="fa fa-envelope-o"></i>
-                                    <span class="badge bg-green">6</span>
-                                </a>
-                                <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
-                                    <li>
-                                        <a>
-                                            <span class="image"><img src="/public/blockinsurance/images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                          <span>John Smith</span>
-                                            <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a>
-                                            <span class="image"><img src="/public/blockinsurance/images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                          <span>John Smith</span>
-                                            <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a>
-                                            <span class="image"><img src="/public/blockinsurance/images/img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                          <span>John Smith</span>
-                                            <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a>
-                                            <span class="image"><img src="/public/blockinsurance//img.jpg" alt="Profile Image" /></span>
-                                            <span>
-                          <span>John Smith</span>
-                                            <span class="time">3 mins ago</span>
-                                            </span>
-                                            <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <div class="text-center">
-                                            <a>
-                                                <strong>See All Alerts</strong>
-                                                <i class="fa fa-angle-right"></i>
-                                            </a>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </li>
+
                         </ul>
                     </nav>
                 </div>
@@ -184,19 +121,10 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h3>Project Detail <small> design</small></h3>
+                            <h3></h3>
                         </div>
 
-                        <div class="title_right">
-                            <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
-                                <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Search for...">
-                                    <span class="input-group-btn">
-                      <button class="btn btn-default" type="button">Go!</button>
-                    </span>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
 
                     <div class="clearfix"></div>
@@ -205,25 +133,87 @@
                         <div class="col-md-12">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>New Partner Contracts Consultancy</h2>
-                                    <ul class="nav navbar-right panel_toolbox">
-                                        <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                        </li>
-                                        <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                                            <ul class="dropdown-menu" role="menu">
-                                                <li><a href="#">Settings 1</a>
-                                                </li>
-                                                <li><a href="#">Settings 2</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li><a class="close-link"><i class="fa fa-close"></i></a>
-                                        </li>
-                                    </ul>
+                                    <h2>Claim Notifications</h2>
                                     <div class="clearfix"></div>
                                 </div>
+                                <div class="x_content">
 
+                                    <!-- <p>Add class <code>bulk_action</code> to table for bulk actions options on row select</p> -->
+
+                                    <div class="table-responsive">
+                                        <table class="table table-striped jambo_table bulk_action">
+                                            <thead>
+                                                <tr class="headings">
+                                                    <th>
+                                                        <input type="checkbox" id="check-all" class="flat">
+                                                    </th>
+                                                    <th class="column-title">Claim Id </th>
+                                                    <th class="column-title">Date </th>
+                                                    <th class="column-title">Other party name</th>
+                                                    <th class="column-title">Status </th>
+                                                    <th class="column-title">Amount </th>
+                                                    <th class="column-title no-link last"><span class="nobr">Action</span>
+                                                    </th>
+                                                    <th class="bulk-actions" colspan="7">
+                                                        <a class="antoo" style="color:#fff; font-weight:500;">Bulk Actions ( <span class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i></a>
+                                                    </th>
+                                                </tr>
+                                            </thead>
+
+                                            <tbody>
+                                                <tr class="even pointer">
+                                                    <td class="a-center ">
+                                                        <input type="checkbox" class="flat" name="table_records">
+                                                    </td>
+                                                    <td class=" ">121000040</td>
+                                                    <td class=" ">June 23, 2018 11:47:56 PM </td>
+
+                                                    <td class=" ">John Blank L</td>
+                                                    <td class=" ">Verification request</td>
+                                                    <td class="a-right a-right ">&euro;7.45</td>
+                                                    <td class=" last">
+                                                        <a href="OtherPartyForm.html">View</a>
+                                                    </td>
+                                                </tr>
+                                                <tr class="odd pointer">
+                                                    <td class="a-center ">
+                                                        <input type="checkbox" class="flat" name="table_records">
+                                                    </td>
+                                                    <td class=" ">121000039</td>
+                                                    <td class=" ">June 23, 2018 11:30:12 PM</td>
+
+                                                    <td class=" ">John Blank L</td>
+                                                    <td class=" ">Verification request</td>
+                                                    <td class="a-right a-right ">&euro;741.20</td>
+                                                    <td class=" last">
+                                                        <a href="OtherPartyForm.html">View</a>
+                                                    </td>
+                                                </tr>
+                                                <tr class="even pointer">
+                                                    <td class="a-center ">
+                                                        <input type="checkbox" class="flat" name="table_records">
+                                                    </td>
+                                                    <td class=" ">121000038</td>
+                                                    <td class=" ">June 24, 2018 10:55:33 PM</td>
+
+                                                    <td class=" ">Mike Smith</td>
+                                                    <td class=" ">Verification request</td>
+                                                    <td class="a-right a-right ">&euro;432.26</td>
+                                                    <td class=" last">
+                                                        <a href="OtherPartyForm.html">View</a>
+                                                    </td>
+                                                </tr>
+
+
+
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                <div class="x_title">
+                                    <h2>New Partner Contracts Consultancy</h2>
+                                    <div class="clearfix"></div>
+                                </div>
                                 <div class="x_content">
 
                                     <div class="col-md-9 col-sm-9 col-xs-12">
@@ -253,7 +243,7 @@
                                             <!-- end of user messages -->
                                             <ul class="messages">
                                                 <li>
-                                                    <img src="/public/blockinsurance/images/img.jpg" class="avatar" alt="Avatar">
+                                                    <img src="images/img.jpg" class="avatar" alt="Avatar">
                                                     <div class="message_date">
                                                         <h3 class="date text-info">24</h3>
                                                         <p class="month">May</p>
@@ -269,7 +259,7 @@
                                                     </div>
                                                 </li>
                                                 <li>
-                                                    <img src="/public/blockinsurance/images/img.jpg" class="avatar" alt="Avatar">
+                                                    <img src="images/img.jpg" class="avatar" alt="Avatar">
                                                     <div class="message_date">
                                                         <h3 class="date text-error">21</h3>
                                                         <p class="month">May</p>
@@ -285,7 +275,7 @@
                                                     </div>
                                                 </li>
                                                 <li>
-                                                    <img src="/public/blockinsurance/images/img.jpg" class="avatar" alt="Avatar">
+                                                    <img src="images/img.jpg" class="avatar" alt="Avatar">
                                                     <div class="message_date">
                                                         <h3 class="date text-info">24</h3>
                                                         <p class="month">May</p>
