--- a/src/public/blockinsurance/OtherPartyForm.html
+++ b/src/public/blockinsurance/OtherPartyForm.html
@@ -10,25 +10,25 @@
 
     <title>Claim Assist</title>
 
-    <link href="vendors/bootstrap/dist/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/bootstrap/dist/css/bootstrap.min.css" type="text/css" rel="stylesheet">
 
-    <link href="vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="vendors/nprogress/nprogress.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/nprogress/nprogress.css" rel="stylesheet">
 
-    <link href="vendors/iCheck/skins/flat/green.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/iCheck/skins/flat/green.css" rel="stylesheet">
 
-    <link href="vendors/google-code-prettify/bin/prettify.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/google-code-prettify/bin/prettify.min.css" rel="stylesheet">
 
-    <link href="vendors/select2/dist/css/select2.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/select2/dist/css/select2.min.css" rel="stylesheet">
 
-    <link href="vendors/switchery/dist/switchery.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/switchery/dist/switchery.min.css" rel="stylesheet">
 
-    <link href="vendors/starrr/dist/starrr.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/starrr/dist/starrr.css" rel="stylesheet">
 
-    <link href="vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
+    <link href="/public/blockinsurance/vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
 
-    <link href="css/custom.min.css" rel="stylesheet">
+    <link href="/public/blockinsurance/css/custom.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
@@ -38,7 +38,7 @@
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;height: 190px;">
-                        <a href="PolicyHolder_index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="images/ClaimAssist.jpeg" style="width: 100%" /></a>
+                        <a href="/policyHolder_index" class="site_title" style="height: 190px;padding-left: 0px"><img src="images/ClaimAssist.jpeg" style="width: 100%" /></a>
                     </div>
 
                     <div class="clearfix"></div>
@@ -61,10 +61,10 @@
                     <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
                         <div class="menu_section">
                             <ul class="nav side-menu">
-                                <li><a href="PolicyHolder_index.html"><i class="fa fa-home"></i> Home</a> </li>
-                                <li><a href="PolicyHolderForm.html"><i class="fa fa-edit"></i> Create Claim </a></li>
-                                <li><a href="PolicyHolder_claimstatus.html"><i class="fa fa-desktop"></i> Claim Status</a></li>
-                                <li><a href="PolicyHolder_notifications.html"><i class="fa fa-table"></i> Notifications</span></a></li>
+                                <li><a href="/policyHolder_index"><i class="fa fa-home"></i> Home</a> </li>
+                                <li><a href="/policyHolderForm"><i class="fa fa-edit"></i> Create Claim </a></li>
+                                <li><a href="/policyHolderClaimStatus"><i class="fa fa-desktop"></i> Claim Status</a></li>
+                                <li><a href="/policyHolderNotifications"><i class="fa fa-table"></i> Notifications</span></a></li>
 
                             </ul>
                         </div>
@@ -260,8 +260,8 @@
                                         <div class="form-group ">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12 ">Do you agree with above details?<span class="required ">*</span></label>
                                             <div class="col-md-6 col-sm-6 col-xs-12 " style="padding-top: 7px;">
-                                                <input type="radio" name="Agreement" value="yes"> yes &nbsp;
-                                                <input type="radio" name="Agreement" value="no"> no
+                                                <input id="agreement" type="radio" name="Agreement" value="yes"> yes &nbsp;
+                                                <input id="agreement" type="radio" name="Agreement" value="no"> no
                                             </div>
                                         </div>
 
@@ -287,40 +287,40 @@
             </div>
 
             <!-- jQuery -->
-            <script src="vendors/jquery/dist/jquery.min.js "></script>
+            <script src="/public/blockinsurance/vendors/jquery/dist/jquery.min.js "></script>
             <!-- Bootstrap -->
-            <script src="vendors/bootstrap/dist/js/bootstrap.min.js "></script>
+            <script src="/public/blockinsurance/vendors/bootstrap/dist/js/bootstrap.min.js "></script>
             <!-- FastClick -->
-            <script src="vendors/fastclick/lib/fastclick.js "></script>
+            <script src="/public/blockinsurance/vendors/fastclick/lib/fastclick.js "></script>
             <!-- NProgress -->
-            <script src="vendors/nprogress/nprogress.js "></script>
+            <script src="/public/blockinsurance/vendors/nprogress/nprogress.js "></script>
             <!-- bootstrap-progressbar -->
-            <script src="vendors/bootstrap-progressbar/bootstrap-progressbar.min.js "></script>
+            <script src="/public/blockinsurance/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js "></script>
             <!-- iCheck -->
-            <script src="vendors/iCheck/icheck.min.js "></script>
+            <script src="/public/blockinsurance/vendors/iCheck/icheck.min.js "></script>
             <!-- bootstrap-daterangepicker -->
-            <script src="vendors/moment/min/moment.min.js "></script>
-            <script src="vendors/bootstrap-daterangepicker/daterangepicker.js "></script>
+            <script src="/public/blockinsurance/vendors/moment/min/moment.min.js "></script>
+            <script src="/public/blockinsurance/vendors/bootstrap-daterangepicker/daterangepicker.js "></script>
             <!-- bootstrap-wysiwyg -->
-            <script src="vendors/bootstrap-wysiwyg/js/bootstrap-wysiwyg.min.js "></script>
-            <script src="vendors/jquery.hotkeys/jquery.hotkeys.js "></script>
-            <script src="vendors/google-code-prettify/src/prettify.js "></script>
+            <script src="/public/blockinsurance/vendors/bootstrap-wysiwyg/js/bootstrap-wysiwyg.min.js "></script>
+            <script src="/public/blockinsurance/vendors/jquery.hotkeys/jquery.hotkeys.js "></script>
+            <script src="/public/blockinsurance/vendors/google-code-prettify/src/prettify.js "></script>
             <!-- jQuery Tags Input -->
-            <script src="vendors/jquery.tagsinput/src/jquery.tagsinput.js "></script>
+            <script src="/public/blockinsurance/vendors/jquery.tagsinput/src/jquery.tagsinput.js "></script>
             <!-- Switchery -->
-            <script src="vendors/switchery/dist/switchery.min.js "></script>
+            <script src="/public/blockinsurance/vendors/switchery/dist/switchery.min.js "></script>
             <!-- Select2 -->
-            <script src="vendors/select2/dist/js/select2.full.min.js "></script>
+            <script src="/public/blockinsurance/vendors/select2/dist/js/select2.full.min.js "></script>
             <!-- Parsley -->
-            <script src="vendors/parsleyjs/dist/parsley.min.js "></script>
+            <script src="/public/blockinsurance/vendors/parsleyjs/dist/parsley.min.js "></script>
             <!-- Autosize -->
-            <script src="vendors/autosize/dist/autosize.min.js "></script>
+            <script src="/public/blockinsurance/vendors/autosize/dist/autosize.min.js "></script>
             <!-- jQuery autocomplete -->
-            <script src="vendors/devbridge-autocomplete/dist/jquery.autocomplete.min.js "></script>
+            <script src="/public/blockinsurance/vendors/devbridge-autocomplete/dist/jquery.autocomplete.min.js "></script>
             <!-- starrr -->
-            <script src="vendors/starrr/dist/starrr.js "></script>
+            <script src="/public/blockinsurance/vendors/starrr/dist/starrr.js "></script>
             <!-- Custom Theme Scripts -->
-            <script src="js/custom.min.js "></script>
+            <script src="/public/blockinsurance/js/custom.min.js "></script>
 
 </body>
 
@@ -378,7 +378,8 @@
         //     });
 
         // });
-        jsondata[agreement] = $("#agreement").val();
+        jsondata["Agreement"] = $("#agreement").val();
+        jsondata["Verification remarks"] = $("#verification_remarks").val();
         console.log(jsondata);
 
         alert(JSON.stringify(jsondata));
