--- a/src/public/blockinsurance/PolicyHolder_index.html
+++ b/src/public/blockinsurance/PolicyHolder_index.html
@@ -37,7 +37,7 @@
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;height: 190px;">
-                        <a href="PolicyHolder_index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="/public/blockinsurance/images/ClaimAssist.jpeg" style="width: 100%" /></a>
+                        <a href="/policyHolder_index" class="site_title" style="height: 190px;padding-left: 0px"><img src="/public/blockinsurance/images/ClaimAssist.jpeg" style="width: 100%" /></a>
                     </div>
 
                     <div class="clearfix"></div>
@@ -61,10 +61,10 @@
                         <div class="menu_section">
 
                             <ul class="nav side-menu">
-                                <li><a href="/policyHolder"><i class="fa fa-home"></i> Home</a> </li>
-                                <li><a href="/policyHolderForm"><i class="fa fa-edit"></i> Create Claim </a></li>
-                                <li><a href="/policyHolderClaimStatus"><i class="fa fa-desktop"></i> Claim Status</a></li>
-                                <li><a href="/policyHolderNotifications"><i class="fa fa-table"></i> Notifications</span></a></li>
+                                <li><a href="/PolicyHolder_index"><i class="fa fa-home"></i> Home</a> </li>
+                                <li><a href="/PolicyHolderForm"><i class="fa fa-edit"></i> Create Claim </a></li>
+                                <li><a href="/PolicyHolderClaimStatus"><i class="fa fa-desktop"></i> Claim Status</a></li>
+                                <li><a href="/PolicyHolderNotifications"><i class="fa fa-table"></i> Notifications</span></a></li>
                                 <!-- <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
                                         <li><a href="chartjs.html">Chart JS</a></li>
