--- a/src/public/blockinsurance/PoliceForm.html
+++ b/src/public/blockinsurance/PoliceForm.html
@@ -159,13 +159,13 @@
                                         <div class="form-group">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12" for="police_station_name">Police station name <span class="required">*</span></label>
                                             <div class="col-md-6 col-sm-6 col-xs-12">
-                                                <input type="text" id="police_station_name" name="Police station name" class="form-control col-md-7 col-xs-12">
+                                                <input type="text" id="police_station_name" name="Police station name" class="form-control col-md-7 col-xs-12" value="Police Headquarters Munich">
                                             </div>
                                         </div>
                                         <div class="form-group ">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12 " for="police_officer_name">Police officer name<span class="required ">*</span></label>
                                             <div class="col-md-6 col-sm-6 col-xs-12 ">
-                                                <input id="police_officer_name" name="Police officer name" class=" form-control col-md-7 col-xs-12 " required="required " type="Email ">
+                                                <input value="Seidlmier" id="police_officer_name" name="Police officer name" class=" form-control col-md-7 col-xs-12 " required="required " type="Email ">
 
                                             </div>
                                         </div>
@@ -185,7 +185,7 @@
                                                             <option value="Czech Republic">Czech Republic</option>
                                                             <option value="Egypt">Egypt</option>
                                                             <option value="France">France</option>
-                                                            <option value="Germany">Germany</option>
+                                                            <option value="Germany" selected="selected">Germany</option>
                                                                 </select>
                                             </div>
                                         </div>
@@ -212,26 +212,26 @@
                                         <div class="form-group">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12" for="otherperson_name">Place<span class="required">*</span></label>
                                             <div class="col-md-6 col-sm-6 col-xs-12">
-                                                <input type="text" id="accident_place" name="Accident place" class="form-control col-md-7 col-xs-12">
+                                                <input type="text" id="accident_place" name="Accident place" value="Munich" class="form-control col-md-7 col-xs-12">
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12" for="Accident_datetime">Date-Time<span class="required">*</span></label>
                                             <div class="col-md-6 col-sm-6 col-xs-12">
-                                                <input type="datetime-local" id="Accident_datetime" name="Accident date-time" class="date-picker form-control col-md-7 col-xs-12">
+                                                <input type="datetime-local" value="20-07-2018" id="Accident_datetime" name="Accident date-time" class="date-picker form-control col-md-7 col-xs-12">
                                             </div>
                                         </div>
 
                                         <div class="form-group">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12" for="p1_name">Person 1</label>
                                             <div class="col-md-6 col-sm-6 col-xs-12">
-                                                <input type="text" id="p1_name" name="Person 1 name" class="form-control col-md-7 col-xs-12">
+                                                <input type="text" id="p1_name" value="Siddhesh" name="Person 1 name" class="form-control col-md-7 col-xs-12">
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12" for="p2_name">Person 2</label>
                                             <div class="col-md-6 col-sm-6 col-xs-12">
-                                                <input type="text" id="p2_name" name="Person 2 name" class="form-control col-md-7 col-xs-12">
+                                                <input type="text" id="p2_name" value="Jeshwanth" name="Person 2 name" class="form-control col-md-7 col-xs-12">
                                             </div>
                                         </div>
                                     </div>
