--- a/src/public/blockinsurance/Police_PendingClaims.html
+++ b/src/public/blockinsurance/Police_PendingClaims.html
@@ -153,9 +153,8 @@
                                                     </th>
                                                     <th class="column-title">Claim Id </th>
                                                     <th class="column-title">Date </th>
-                                                    <th class="column-title">Other party name</th>
+                                                    <th class="column-title">Insurer</th>
                                                     <th class="column-title">Status </th>
-                                                    <th class="column-title">Amount </th>
                                                     <th class="column-title no-link last"><span class="nobr">Action</span>
                                                     </th>
                                                     <th class="bulk-actions" colspan="7">
@@ -169,41 +168,16 @@
                                                     <td class="a-center ">
                                                         <input type="checkbox" class="flat" name="table_records">
                                                     </td>
-                                                    <td class=" ">121000040</td>
-                                                    <td class=" ">June 23, 2018 11:47:56 PM </td>
+                                                    <td class=" ">12087654</td>
+                                                    <td class=" ">July 20, 2018 11:47:56 AM </td>
 
-                                                    <td class=" ">John Blank L</td>
+                                                    <td class=" ">Allianz</td>
                                                     <td class=" ">Pending</td>
-                                                    <td class="a-right a-right ">$7.45</td>
-                                                    <td class=" last"><a href="PoliceForm.html">View</a>
+                                                    <td class=" last"><a href="/policeForm">View</a>
                                                     </td>
                                                 </tr>
-                                                <tr class="odd pointer">
-                                                    <td class="a-center ">
-                                                        <input type="checkbox" class="flat" name="table_records">
-                                                    </td>
-                                                    <td class=" ">121000039</td>
-                                                    <td class=" ">June 23, 2018 11:30:12 PM</td>
-
-                                                    <td class=" ">John Blank L</td>
-                                                    <td class=" ">Pending</td>
-                                                    <td class="a-right a-right ">$741.20</td>
-                                                    <td class=" last"><a href="PoliceForm.html">View</a>
-                                                    </td>
-                                                </tr>
-                                                <tr class="even pointer">
-                                                    <td class="a-center ">
-                                                        <input type="checkbox" class="flat" name="table_records">
-                                                    </td>
-                                                    <td class=" ">121000038</td>
-                                                    <td class=" ">June 24, 2018 10:55:33 PM</td>
-
-                                                    <td class=" ">Mike Smith</td>
-                                                    <td class=" ">Pending</td>
-                                                    <td class="a-right a-right ">$432.26</td>
-                                                    <td class=" last"><a href="PoliceForm.html">View</a>
-                                                    </td>
-                                                </tr>
+                                                
+                                              
 
 
                                             </tbody>
