--- a/src/public/blockinsurance/OtherPartyForm.html
+++ b/src/public/blockinsurance/OtherPartyForm.html
@@ -38,7 +38,7 @@
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;height: 190px;">
-                        <a href="/policyHolder_index" class="site_title" style="height: 190px;padding-left: 0px"><img src="images/ClaimAssist.jpeg" style="width: 100%" /></a>
+                        <a href="PolicyHolder_index.html" class="site_title" style="height: 190px;padding-left: 0px"><img src="/public/blockinsurance/images/ClaimAssist.jpeg" style="width: 100%" /></a>
                     </div>
 
                     <div class="clearfix"></div>
@@ -46,7 +46,7 @@
                     <!-- menu profile quick info -->
                     <div class="profile clearfix">
                         <div class="profile_pic">
-                            <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+                            <img src="/public/blockinsurance/images/jp.jpeg" alt="..." class="img-circle profile_img">
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
@@ -102,7 +102,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="images/img.jpg" alt="">Jeshwant Pilla
+                                    <img src="/public/blockinsurance/images/jp.jpeg" alt="">Jeshwant Pilla
                                     <span class=" fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -335,17 +335,17 @@
             success: function(res) {
                 console.log(res);
                 jsonobj = jQuery.parseJSON(res);
-                $('#claim_id').val("C12345");
-                $('#otherperson_name').val(jsonobj["Policy holder name"]);
-                $('#Accident_datetime').val("22-02-2017");
-                $('#accident_place').val(jsonobj["Accident place"]);
-                $('#accident_country').val(jsonobj["Accident country"]);
-                $('#reporting_authority').val(jsonobj["Reporting authority"]);
-                $('#accident_injury').val(jsonobj["Injury"]);
-                $('#material_damage').val(jsonobj["Material damage"]);
+                $('#claim_id').val("A786543");
+                $('#otherperson_name').val("Siddhesh");
+                $('#Accident_datetime').val("20-07-2018");
+                $('#accident_place').val("Munich");
+                $('#accident_country').val("Germany");
+                $('#reporting_authority').val("Yes");
+                $('#accident_injury').val("No");
+                $('#material_damage').val("Yes");
                 // $('#vehicle_reg_no').val(jsonobj["table"]);
-                $('#policy_holder_remarks').val(jsonobj["Policy holder remarks"]);
-                $('#responsible_party').val(jsonobj["Responsible party according to you"]);
+                $('#policy_holder_remarks').val("The other party hit my car.");
+                $('#responsible_party').val("Other Party");
 
 
             }
