--- a/src/public/blockinsurance/PolicyHolder_claimstatus.html
+++ b/src/public/blockinsurance/PolicyHolder_claimstatus.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Claim Assist | </title>
+    <title>Claim Assist</title>
 
     <!-- Bootstrap -->
     <link href="/public/blockinsurance/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -298,9 +298,9 @@
             <!-- /page content -->
 
             <!-- footer content -->
-            <footer>
+            <footer style="background-color: #0e1925; color: white">
                 <div class="pull-right">
-
+                    <strong>CLAIM ASSIST </strong><br><small>All your claims under one roof</small>
                 </div>
                 <div class="clearfix"></div>
             </footer>
