Police UI changes

--- a/src/public/blockinsurance/PoliceForm.html
+++ b/src/public/blockinsurance/PoliceForm.html
@@ -66,7 +66,7 @@
                                 <li><a href="/police"><i class="fa fa-home"></i> Home</a> </li>
                                 <li><a href="/policePendingClaims"><i class="fa fa-edit"></i> Pending Claims </a></li>
                                 <li><a href="/policeClaimHistory"><i class="fa fa-desktop"></i> Claim History</a></li>
-                                <li><a href="/policeNotifications"><i class="fa fa-table"></i> Notifications</span></a></li>
+                                <!-- <li><a href="/policeNotifications"><i class="fa fa-table"></i> Notifications</span></a></li> -->
 
                             </ul>
                         </div>
