--- a/src/public/blockinsurance/Police_ClaimHistory.html
+++ b/src/public/blockinsurance/Police_ClaimHistory.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Gentelella Alela! | </title>
+    <title>Claim Assist</title>
 
     <!-- Bootstrap -->
     <link href="/public/blockinsurance/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -55,7 +55,7 @@
                                 <li><a href="/police"><i class="fa fa-home"></i> Home</a> </li>
                                 <li><a href="/policePendingClaims"><i class="fa fa-edit"></i> Pending Claims </a></li>
                                 <li><a href="/policeClaimHistory"><i class="fa fa-desktop"></i> Claim History</a></li>
-                                <li><a href="/policeNotifications"><i class="fa fa-table"></i> Notifications</span></a></li>
+                                <!-- <li><a href="/policeNotifications"><i class="fa fa-table"></i> Notifications</span></a></li> -->
                             </ul>
                         </div>
 
@@ -262,9 +262,9 @@
             <!-- /page content -->
 
             <!-- footer content -->
-            <footer>
+            <footer style="background-color: #0e1925; color: white">
                 <div class="pull-right">
-                    Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+                    <strong>CLAIM ASSIST </strong><br><small>All your claims under one roof</small>
                 </div>
                 <div class="clearfix"></div>
             </footer>
