--- a/src/public/blockinsurance/Hosp_PendingClaims.html
+++ b/src/public/blockinsurance/Hosp_PendingClaims.html
@@ -176,7 +176,7 @@
                                                     <td class=" ">John Blank L</td>
                                                     <td class=" ">Pending</td>
                                                     <td class="a-right a-right ">$7.45</td>
-                                                    <td class=" last"><a href="HospForm.html">View</a>
+                                                    <td class=" last"><a href="/hospitalForm">View</a>
                                                     </td>
                                                 </tr>
                                                 <tr class="odd pointer">
@@ -189,7 +189,7 @@
                                                     <td class=" ">John Blank L</td>
                                                     <td class=" ">Pending</td>
                                                     <td class="a-right a-right ">$741.20</td>
-                                                    <td class=" last"><a href="HospForm.html">View</a>
+                                                    <td class=" last"><a href="/hospitalForm">View</a>
                                                     </td>
                                                 </tr>
                                                 <tr class="even pointer">
@@ -202,7 +202,7 @@
                                                     <td class=" ">Mike Smith</td>
                                                     <td class=" ">Pending</td>
                                                     <td class="a-right a-right ">$432.26</td>
-                                                    <td class=" last"><a href="HospForm.html">View</a>
+                                                    <td class=" last"><a href="/hospitalForm">View</a>
                                                     </td>
                                                 </tr>
 
