--- a/src/public/blockinsurance/OtherPartyForm.html
+++ b/src/public/blockinsurance/OtherPartyForm.html
@@ -321,6 +321,11 @@
             <script src="/public/blockinsurance/vendors/starrr/dist/starrr.js "></script>
             <!-- Custom Theme Scripts -->
             <script src="/public/blockinsurance/js/custom.min.js "></script>
+            <script src="/public/blockinsurance/js/index.js"></script>
+            <script src="public/blockinsurance/js/web3.min.js"></script>
+            <script src="public/blockinsurance/js/truffle-contract.js"></script>
+            <script src="/public/blockinsurance/js/otherParty.js "></script>
+            <script src="public/blockinsurance/js/contract.js" type="text/javascript" ></script>
 
 </body>
 
