--- a/src/public/blockinsurance/PolicyHolderForm.html
+++ b/src/public/blockinsurance/PolicyHolderForm.html
@@ -139,7 +139,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <!-- Start - Policy holder form -->
-                    <form id="PolicyHolder_form" data-parsley-validate class="form-horizontal form-label-left" onsubmit="return false;">
+                    <form id="PolicyHolder_form" data-parsley-validate class="form-horizontal form-label-left" onsubmit="claim()">
                         <!-- Start Personal details -->
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12">
@@ -205,7 +205,7 @@
                                         <div class="form-group ">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12 ">Policy no.<span class="required ">*</span></label>
                                             <div class="col-md-6 col-sm-6 col-xs-12 ">
-                                                <input id="policyholder_policy_no" name="Policy holder policy no." class="date-picker form-control col-md-7 col-xs-12 " type="text ">
+                                                <input id="policyholder_policy_no" name="Policy holder policy no." class="date-picker form-control col-md-7 col-xs-12 " type="text " required>
                                             </div>
                                         </div>
                                         <div class="form-group ">
@@ -552,69 +552,13 @@
             <script src="/public/blockinsurance/vendors/starrr/dist/starrr.js "></script>
             <!-- Custom Theme Scripts -->
             <script src="/public/blockinsurance/js/custom.min.js "></script>
+            <script src="/public/blockinsurance/js/index.js"></script>
+            <script src="public/blockinsurance/js/web3.min.js"></script>
+            <script src="public/blockinsurance/js/truffle-contract.js"></script>
+            <script src="public/blockinsurance/js/contract.js" type="text/javascript" ></script>
 
 </body>
 <script>
-    $("#submit").click(function() {
-        event.preventDefault();
-        var jsondata = {};
-        var accidentPhotos;
-        // var accident_photos;
-        var file = document.getElementById('claim_form').files[0];
-        if (file) {
-            // create reader
-            var reader = new FileReader();
-            reader.readAsText(file);
-            reader.onload = function(e) {
-                accidentPhotos = e.target.result;
-                console.log(accidentPhotos);
-            };
-        }
-        // var image = document.getElementById('Accident_photos').files[0];
-        // if (image) {
-        //     // create reader
-        //     var reader = new FileReader();
-        //     reader.readAsText(image);
-        //     reader.onload = function(e) {
-        //         accident_photos = e.target.result;
-        //     };
-        // }
-        $("input").each(function($i) {
-            var name = $(this).attr('name')
-            if ($(this).val()) {
-                jsondata[name] = $(this).val();
-            }
-            $("input:radio:checked").each(function($i) {
-                var name = $(this).attr('name')
-                if ($(this).val()) {
-                    jsondata[name] = $(this).val();
-                }
-            });
-
-            $("select").each(function($i) {
-                var name = $(this).attr('name')
-                if ($(this).val()) {
-                    jsondata[name] = $(this).val();
-                }
-            });
-
-        });
-        console.log(jsondata);
-        console.log(claim_form);
-        alert(JSON.stringify(jsondata));
-
-        $.post("/saveClaim", {
-                claimObject: jsondata
-            },
-            function(result) {
-                console.log("hash ====> " + result)
-            });
-
-    });
-
-    function saveClaim() {
-        console.log("Reached HEre ")
-    }
 </script>
 
 </html>
